# nuke-mcp

./: .gitignore  LICENSE  LICENSE.md  README.md  SETUP.bat  SETUP.sh  docker_support.dockerfile  enhanced_nuke_addon.py  enhanced_nuke_mcp_server.py  install_check_script.py  linux_setup.sh  main_readme.md  manifest.in  mcp.json  nuke_addon.py  nuke_addon_portable.py  portable_init.py  portable_start_script.bat  portable_start_script.sh  pyproject.toml  requirements.txt  setup_script.bat  start_nuke_mcp.bat
