[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nuke-mcp"
version = "0.1.0"
description = "Nuke integration with Claude AI through Model Context Protocol"
authors = [
    {name = "Mahit", email = "mahit@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
nuke-mcp = "nuke_mcp.server:main"