[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nuke-mcp"
version = "1.0.0"
description = "Portable Nuke integration with Claude AI through Model Context Protocol"
authors = [
    {name = "Mahit", email = "mahit@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["nuke", "vfx", "ai", "claude", "mcp", "automation"]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/nuke-mcp"
Repository = "https://github.com/yourusername/nuke-mcp"
Issues = "https://github.com/yourusername/nuke-mcp/issues"

[project.scripts]
nuke-mcp = "enhanced_nuke_mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "*.py",
    "*.md",
    "*.txt",
    "*.toml",
    "*.bat",
    "*.json"
]